fix: use valid z-index

--- a/src/App.css
+++ b/src/App.css
@@ -99,7 +99,7 @@
     position: absolute;
     background-color: #ccc;
     border-radius: 4px;
-    z-index: calc(infinity);
+    z-index: 9999;
 }
 
 .context-menu-item {
@@ -124,7 +124,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    z-index: calc(infinity);
+    z-index: 9999;
 }
 
 .edit-modal {
